Fix player height on mobile

--- a/client/src/app/+videos/+video-watch/video-watch.component.scss
+++ b/client/src/app/+videos/+video-watch/video-watch.component.scss
@@ -98,10 +98,14 @@ $video-info-margin-left: 44px;
   }
 
   @media screen and (max-width: 600px) {
+    #videojs-wrapper {
+      height: getPlayerHeight(100vw) !important;
+    }
+
     .remote-server-down,
     ::ng-deep .video-js {
       width: 100vw;
-      height: getPlayerHeight(100vw)
+      height: getPlayerHeight(100vw) !important;
     }
   }
 }
